Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.5.0-rc
-
None
-
Linux, Windows
Qt 4.8.1
-
9ad4df1382b861ded0c64af623a83292b48bc9ef
Description
Type Hierarchy view crashes if you do the following:
1. Open an editor holding a C++ file with a class definition
2. Open Type Hierarchy for this class
3. Open another editor.
4. Click on the 'X' of the editor opened in 1. in "Open Documents"
5. Click on the original type in the Type Hierarchy.
Result:
Creator crashes, trying to access the pointer to the editor opened in 1) which is no longer valid.
Expected result:
No crash