Fix crash in CPP Type Hierarchy

Fix crash happening when closing the editor containing a class that
is viewed in the Type Hierarchy.

Task-number: QTCREATORBUG-7327
Change-Id: I87298b7e0b271b9a5063d48999a37e8a0e78ba48
Reviewed-by: Eike Ziller <eike.ziller@nokia.com>
Reviewed-by: David Schulz <david.schulz@nokia.com>